--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,16 @@
   version="3.1"
   metadata-complete="false">
   
+  <filter>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <filter-class>bitcamp.java89.ems2.filter.CharacterEncodingFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
    <servlet>
     <servlet-name>Context Loader Servlet</servlet-name>
     <servlet-class>bitcamp.java89.ems2.servlet.ContextLoaderServlet</servlet-class>
