--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@
   version="3.1"
   metadata-complete="false">
   
+  <listener>
+    <listener-class>bitcamp.java89.ems2.listener.ContextLoaderListener</listener-class>
+  </listener>
+  
   <filter>
     <filter-name>CharacterEncodingFilter</filter-name>
     <filter-class>bitcamp.java89.ems2.filter.CharacterEncodingFilter</filter-class>
@@ -16,11 +20,13 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <!-- 
    <servlet>
     <servlet-name>Context Loader Servlet</servlet-name>
     <servlet-class>bitcamp.java89.ems2.servlet.ContextLoaderServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+   -->
   
 </web-app>
 
